--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "ejs": "~2.5.6",
-    "express": "~4.15.2",
+    "express": "^4.15.3",
     "morgan": "~1.8.1",
     "mysql": "^2.13.0",
-    "serve-favicon": "~2.4.2",
+    "serve-favicon": "^2.4.3",
     "socket.io": "^2.0.3"
   }
 }
